Integration with Passport social and UI Implementation

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -899,6 +899,218 @@
             "ab3ed9ee"
           ],
           "type": "sass"
+        },
+        "9b2e4ad6": {
+          "id": "9b2e4ad6",
+          "path": "public/app/directives/list-cities/list-cities.js",
+          "output": "public/app/directives/list-cities/list-cities-dist.js",
+          "name": "list-cities.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "517e0f90": {
+          "id": "517e0f90",
+          "path": "public/app/directives/list-cities/list-cities.html",
+          "output": "public/app/directives/list-cities/list-cities.html",
+          "name": "list-cities.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "58fced39": {
+          "id": "58fced39",
+          "path": "public/images/logo.png",
+          "output": "public/images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 3964,
+          "type": "png",
+          "initialSize": 3964,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d47b42ca": {
+          "id": "d47b42ca",
+          "path": "public/javascripts/ngAutocomplete.js",
+          "output": "public/javascripts/ngAutocomplete-dist.js",
+          "name": "ngAutocomplete.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "20861c54": {
+          "id": "20861c54",
+          "path": "public/images/bg-0.jpg",
+          "output": "public/images/bg-0.jpg",
+          "name": "bg-0.jpg",
+          "category": "IMAGE",
+          "size": 661706,
+          "type": "jpg",
+          "initialSize": 661706,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "870345b7": {
+          "id": "870345b7",
+          "path": "public/images/bg.jpg",
+          "output": "public/images/bg.jpg",
+          "name": "bg.jpg",
+          "category": "IMAGE",
+          "size": 1603716,
+          "type": "jpg",
+          "initialSize": 1603716,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "823fea4e": {
+          "id": "823fea4e",
+          "path": "public/images/uikit-news-2.png",
+          "output": "public/images/uikit-news-2.png",
+          "name": "uikit-news-2.png",
+          "category": "IMAGE",
+          "size": 559500,
+          "type": "png",
+          "initialSize": 559500,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4e6b500c": {
+          "id": "4e6b500c",
+          "path": "public/images/uikit-news-1.png",
+          "output": "public/images/uikit-news-1.png",
+          "name": "uikit-news-1.png",
+          "category": "IMAGE",
+          "size": 534474,
+          "type": "png",
+          "initialSize": 534474,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e0c489f9": {
+          "id": "e0c489f9",
+          "path": "public/images/restaurant.png",
+          "output": "public/images/restaurant.png",
+          "name": "restaurant.png",
+          "category": "IMAGE",
+          "size": 1953,
+          "type": "png",
+          "initialSize": 1953,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "dfb75916": {
+          "id": "dfb75916",
+          "path": "public/images/gas_station.png",
+          "output": "public/images/gas_station.png",
+          "name": "gas_station.png",
+          "category": "IMAGE",
+          "size": 1297,
+          "type": "png",
+          "initialSize": 1297,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d439d137": {
+          "id": "d439d137",
+          "path": "public/images/hotel.png",
+          "output": "public/images/hotel.png",
+          "name": "hotel.png",
+          "category": "IMAGE",
+          "size": 1130,
+          "type": "png",
+          "initialSize": 1130,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ebdd3929": {
+          "id": "ebdd3929",
+          "path": "public/images/entertainment.png",
+          "output": "public/images/entertainment.png",
+          "name": "entertainment.png",
+          "category": "IMAGE",
+          "size": 2421,
+          "type": "png",
+          "initialSize": 2421,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5867c933": {
+          "id": "5867c933",
+          "path": "public/images/event.png",
+          "output": "public/images/event.png",
+          "name": "event.png",
+          "category": "IMAGE",
+          "size": 2659,
+          "type": "png",
+          "initialSize": 2659,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c461ebc1": {
+          "id": "c461ebc1",
+          "path": "public/images/drinks.png",
+          "output": "public/images/drinks.png",
+          "name": "drinks.png",
+          "category": "IMAGE",
+          "size": 1854,
+          "type": "png",
+          "initialSize": 1854,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7bbfbf21": {
+          "id": "7bbfbf21",
+          "path": "public/images/outdoor.png",
+          "output": "public/images/outdoor.png",
+          "name": "outdoor.png",
+          "category": "IMAGE",
+          "size": 2556,
+          "type": "png",
+          "initialSize": 2556,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2db1c738": {
+          "id": "2db1c738",
+          "path": "public/images/shop.png",
+          "output": "public/images/shop.png",
+          "name": "shop.png",
+          "category": "IMAGE",
+          "size": 1403,
+          "type": "png",
+          "initialSize": 1403,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
