--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "backbone": ">= 1.3.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -13,7 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "underscore" : ">= 1.3.1",
-    "backbone": ">= 1.3.1"
+    "underscore": ">= 1.3.1",
+    "yelp": "^1.0.1"
   }
 }
