Adding trip to MySql

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1122,6 +1122,22 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "f88790a0": {
+          "id": "f88790a0",
+          "path": "models/user.js",
+          "output": "models/user-dist.js",
+          "name": "user.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
