Updated Home Page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -943,19 +943,6 @@
           "parents": [],
           "type": "html"
         },
-        "58fced39": {
-          "id": "58fced39",
-          "path": "public/images/logo.png",
-          "output": "public/images/logo.png",
-          "name": "logo.png",
-          "category": "IMAGE",
-          "size": 3964,
-          "type": "png",
-          "initialSize": 3964,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "d47b42ca": {
           "id": "d47b42ca",
           "path": "public/javascripts/ngAutocomplete.js",
@@ -981,19 +968,6 @@
           "size": 661706,
           "type": "jpg",
           "initialSize": 661706,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "870345b7": {
-          "id": "870345b7",
-          "path": "public/images/bg.jpg",
-          "output": "public/images/bg.jpg",
-          "name": "bg.jpg",
-          "category": "IMAGE",
-          "size": 1603716,
-          "type": "jpg",
-          "initialSize": 1603716,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -1181,6 +1155,474 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "58fced39": {
+          "id": "58fced39",
+          "path": "public/images/logo.png",
+          "output": "public/images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 4990,
+          "type": "png",
+          "initialSize": 4990,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "05f2714b": {
+          "id": "05f2714b",
+          "path": "public/images/bg-1.jpg",
+          "output": "public/images/bg-1.jpg",
+          "name": "bg-1.jpg",
+          "category": "IMAGE",
+          "size": 142073,
+          "type": "jpg",
+          "initialSize": 142073,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "870345b7": {
+          "id": "870345b7",
+          "path": "public/images/bg.jpg",
+          "output": "public/images/bg.jpg",
+          "name": "bg.jpg",
+          "category": "IMAGE",
+          "size": 508239,
+          "type": "jpg",
+          "initialSize": 508239,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4eb39d06": {
+          "id": "4eb39d06",
+          "path": "public/images/explore-2.jpg",
+          "output": "public/images/explore-2.jpg",
+          "name": "explore-2.jpg",
+          "category": "IMAGE",
+          "size": 1645954,
+          "type": "jpg",
+          "initialSize": 1645954,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8d69a861": {
+          "id": "8d69a861",
+          "path": "public/images/explore-3.jpg",
+          "output": "public/images/explore-3.jpg",
+          "name": "explore-3.jpg",
+          "category": "IMAGE",
+          "size": 1848556,
+          "type": "jpg",
+          "initialSize": 1848556,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c48ad104": {
+          "id": "c48ad104",
+          "path": "public/images/explore-4.jpg",
+          "output": "public/images/explore-4.jpg",
+          "name": "explore-4.jpg",
+          "category": "IMAGE",
+          "size": 3104942,
+          "type": "jpg",
+          "initialSize": 3104942,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "11d57c1a": {
+          "id": "11d57c1a",
+          "path": "public/images/explore-6.jpg",
+          "output": "public/images/explore-6.jpg",
+          "name": "explore-6.jpg",
+          "category": "IMAGE",
+          "size": 3235718,
+          "type": "jpg",
+          "initialSize": 3235718,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6c9f9a8d": {
+          "id": "6c9f9a8d",
+          "path": "public/images/explore-8.jpg",
+          "output": "public/images/explore-8.jpg",
+          "name": "explore-8.jpg",
+          "category": "IMAGE",
+          "size": 918617,
+          "type": "jpg",
+          "initialSize": 918617,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "76730c79": {
+          "id": "76730c79",
+          "path": "public/images/explore-1.jpg",
+          "output": "public/images/explore-1.jpg",
+          "name": "explore-1.jpg",
+          "category": "IMAGE",
+          "size": 1151008,
+          "type": "jpg",
+          "initialSize": 1151008,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "64ae98cb": {
+          "id": "64ae98cb",
+          "path": "public/images/explore-5.jpg",
+          "output": "public/images/explore-5.jpg",
+          "name": "explore-5.jpg",
+          "category": "IMAGE",
+          "size": 1264321,
+          "type": "jpg",
+          "initialSize": 1264321,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "77d6736d": {
+          "id": "77d6736d",
+          "path": "public/images/explore-7.jpg",
+          "output": "public/images/explore-7.jpg",
+          "name": "explore-7.jpg",
+          "category": "IMAGE",
+          "size": 1175358,
+          "type": "jpg",
+          "initialSize": 1175358,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "18ba2b73": {
+          "id": "18ba2b73",
+          "path": "public/images/Pixels.jpg",
+          "output": "public/images/Pixels.jpg",
+          "name": "Pixels.jpg",
+          "category": "IMAGE",
+          "size": 1465203,
+          "type": "jpg",
+          "initialSize": 1465203,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4f7082f3": {
+          "id": "4f7082f3",
+          "path": "public/images/explore-9.jpg",
+          "output": "public/images/explore-9.jpg",
+          "name": "explore-9.jpg",
+          "category": "IMAGE",
+          "size": 112829,
+          "type": "jpg",
+          "initialSize": 112829,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "db3d1d09": {
+          "id": "db3d1d09",
+          "path": "public/images/explore-10.jpg",
+          "output": "public/images/explore-10.jpg",
+          "name": "explore-10.jpg",
+          "category": "IMAGE",
+          "size": 6028796,
+          "type": "jpg",
+          "initialSize": 6028796,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d3b438d7": {
+          "id": "d3b438d7",
+          "path": "public/images/explore-11.jpg",
+          "output": "public/images/explore-11.jpg",
+          "name": "explore-11.jpg",
+          "category": "IMAGE",
+          "size": 7470194,
+          "type": "jpg",
+          "initialSize": 7470194,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "42c1587d": {
+          "id": "42c1587d",
+          "path": "public/images/explore-12.jpg",
+          "output": "public/images/explore-12.jpg",
+          "name": "explore-12.jpg",
+          "category": "IMAGE",
+          "size": 1945603,
+          "type": "jpg",
+          "initialSize": 1945603,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eba06b19": {
+          "id": "eba06b19",
+          "path": "public/images/explore-13.jpg",
+          "output": "public/images/explore-13.jpg",
+          "name": "explore-13.jpg",
+          "category": "IMAGE",
+          "size": 10265584,
+          "type": "jpg",
+          "initialSize": 10265584,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d0b6a9e7": {
+          "id": "d0b6a9e7",
+          "path": "public/images/explore-14.jpg",
+          "output": "public/images/explore-14.jpg",
+          "name": "explore-14.jpg",
+          "category": "IMAGE",
+          "size": 925817,
+          "type": "jpg",
+          "initialSize": 925817,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "75cde8ec": {
+          "id": "75cde8ec",
+          "path": "public/images/explore-15.jpg",
+          "output": "public/images/explore-15.jpg",
+          "name": "explore-15.jpg",
+          "category": "IMAGE",
+          "size": 2130064,
+          "type": "jpg",
+          "initialSize": 2130064,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b0a8a362": {
+          "id": "b0a8a362",
+          "path": "public/images/explore-16.jpg",
+          "output": "public/images/explore-16.jpg",
+          "name": "explore-16.jpg",
+          "category": "IMAGE",
+          "size": 4554666,
+          "type": "jpg",
+          "initialSize": 4554666,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "abfcd72c": {
+          "id": "abfcd72c",
+          "path": "public/images/explore-17.jpg",
+          "output": "public/images/explore-17.jpg",
+          "name": "explore-17.jpg",
+          "category": "IMAGE",
+          "size": 7462740,
+          "type": "jpg",
+          "initialSize": 7462740,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ac80ab28": {
+          "id": "ac80ab28",
+          "path": "public/images/explore-18.jpg",
+          "output": "public/images/explore-18.jpg",
+          "name": "explore-18.jpg",
+          "category": "IMAGE",
+          "size": 4813781,
+          "type": "jpg",
+          "initialSize": 4813781,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "697b076d": {
+          "id": "697b076d",
+          "path": "public/images/explore-19.jpg",
+          "output": "public/images/explore-19.jpg",
+          "name": "explore-19.jpg",
+          "category": "IMAGE",
+          "size": 1199609,
+          "type": "jpg",
+          "initialSize": 1199609,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b5bb9db4": {
+          "id": "b5bb9db4",
+          "path": "public/images/explore-20.jpg",
+          "output": "public/images/explore-20.jpg",
+          "name": "explore-20.jpg",
+          "category": "IMAGE",
+          "size": 1274850,
+          "type": "jpg",
+          "initialSize": 1274850,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e27105a4": {
+          "id": "e27105a4",
+          "path": "public/images/explore-21.jpg",
+          "output": "public/images/explore-21.jpg",
+          "name": "explore-21.jpg",
+          "category": "IMAGE",
+          "size": 3710932,
+          "type": "jpg",
+          "initialSize": 3710932,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9b366eab": {
+          "id": "9b366eab",
+          "path": "public/images/explore-22.jpg",
+          "output": "public/images/explore-22.jpg",
+          "name": "explore-22.jpg",
+          "category": "IMAGE",
+          "size": 2317934,
+          "type": "jpg",
+          "initialSize": 2317934,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2b326a32": {
+          "id": "2b326a32",
+          "path": "public/images/explore-23.jpg",
+          "output": "public/images/explore-23.jpg",
+          "name": "explore-23.jpg",
+          "category": "IMAGE",
+          "size": 2048388,
+          "type": "jpg",
+          "initialSize": 2048388,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cdc46848": {
+          "id": "cdc46848",
+          "path": "public/images/explore-24.jpg",
+          "output": "public/images/explore-24.jpg",
+          "name": "explore-24.jpg",
+          "category": "IMAGE",
+          "size": 1715352,
+          "type": "jpg",
+          "initialSize": 1715352,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "115667c1": {
+          "id": "115667c1",
+          "path": "public/images/explore-25.jpg",
+          "output": "public/images/explore-25.jpg",
+          "name": "explore-25.jpg",
+          "category": "IMAGE",
+          "size": 7408055,
+          "type": "jpg",
+          "initialSize": 7408055,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "978ebdbc": {
+          "id": "978ebdbc",
+          "path": "public/images/explore-6.png",
+          "output": "public/images/explore-6.png",
+          "name": "explore-6.png",
+          "category": "IMAGE",
+          "size": 1173498,
+          "type": "png",
+          "initialSize": 1173498,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fa24dc3d": {
+          "id": "fa24dc3d",
+          "path": "public/images/explore-5.png",
+          "output": "public/images/explore-5.png",
+          "name": "explore-5.png",
+          "category": "IMAGE",
+          "size": 958359,
+          "type": "png",
+          "initialSize": 958359,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5e355d6c": {
+          "id": "5e355d6c",
+          "path": "public/images/explore-7.png",
+          "output": "public/images/explore-7.png",
+          "name": "explore-7.png",
+          "category": "IMAGE",
+          "size": 1175283,
+          "type": "png",
+          "initialSize": 1175283,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1d3cf61e": {
+          "id": "1d3cf61e",
+          "path": "public/images/explore-1.png",
+          "output": "public/images/explore-1.png",
+          "name": "explore-1.png",
+          "category": "IMAGE",
+          "size": 2659244,
+          "type": "png",
+          "initialSize": 2659244,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "20ffdb63": {
+          "id": "20ffdb63",
+          "path": "public/images/explore-2.png",
+          "output": "public/images/explore-2.png",
+          "name": "explore-2.png",
+          "category": "IMAGE",
+          "size": 809627,
+          "type": "png",
+          "initialSize": 809627,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d4ccd81d": {
+          "id": "d4ccd81d",
+          "path": "public/images/explore-3.png",
+          "output": "public/images/explore-3.png",
+          "name": "explore-3.png",
+          "category": "IMAGE",
+          "size": 614100,
+          "type": "png",
+          "initialSize": 614100,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "523cc947": {
+          "id": "523cc947",
+          "path": "public/images/explore-4.png",
+          "output": "public/images/explore-4.png",
+          "name": "explore-4.png",
+          "category": "IMAGE",
+          "size": 1545469,
+          "type": "png",
+          "initialSize": 1545469,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
