Bing Integration for Header City Image

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1623,6 +1623,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "7cea9eb3": {
+          "id": "7cea9eb3",
+          "path": "app/plantrip.js",
+          "output": "app/plantrip-dist.js",
+          "name": "plantrip.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
