--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "node-bing-api": "^2.4.1",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2",
     "underscore": ">= 1.3.1",
