Login/Sign up modal

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1639,6 +1639,75 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "0e4f3ea8": {
+          "id": "0e4f3ea8",
+          "path": "app/trip.js",
+          "output": "app/trip-dist.js",
+          "name": "trip.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "32859d14": {
+          "id": "32859d14",
+          "path": "public/images/curve-1 - Copy.png",
+          "output": "public/images/curve-1 - Copy.png",
+          "name": "curve-1 - Copy.png",
+          "category": "IMAGE",
+          "size": 4116,
+          "type": "png",
+          "initialSize": 4116,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d3ade0a0": {
+          "id": "d3ade0a0",
+          "path": "public/images/curve-1.png",
+          "output": "public/images/curve-1.png",
+          "name": "curve-1.png",
+          "category": "IMAGE",
+          "size": 4438,
+          "type": "png",
+          "initialSize": 4438,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ba9b1eb3": {
+          "id": "ba9b1eb3",
+          "path": "public/javascripts/ngDialog.js",
+          "output": "public/javascripts/ngDialog-dist.js",
+          "name": "ngDialog.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d8b7213d": {
+          "id": "d8b7213d",
+          "path": "public/app/modals/login.html",
+          "output": "public/app/modals/login.html",
+          "name": "login.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
