--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1656,32 +1656,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "32859d14": {
-          "id": "32859d14",
-          "path": "public/images/curve-1 - Copy.png",
-          "output": "public/images/curve-1 - Copy.png",
-          "name": "curve-1 - Copy.png",
-          "category": "IMAGE",
-          "size": 4116,
-          "type": "png",
-          "initialSize": 4116,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "d3ade0a0": {
-          "id": "d3ade0a0",
-          "path": "public/images/curve-1.png",
-          "output": "public/images/curve-1.png",
-          "name": "curve-1.png",
-          "category": "IMAGE",
-          "size": 4438,
-          "type": "png",
-          "initialSize": 4438,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "ba9b1eb3": {
           "id": "ba9b1eb3",
           "path": "public/javascripts/ngDialog.js",
@@ -1708,6 +1682,45 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "60891cd0": {
+          "id": "60891cd0",
+          "path": "public/images/logo-dark.png",
+          "output": "public/images/logo-dark.png",
+          "name": "logo-dark.png",
+          "category": "IMAGE",
+          "size": 4603,
+          "type": "png",
+          "initialSize": 4603,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "29497d2f": {
+          "id": "29497d2f",
+          "path": "public/images/curve-1-old.png",
+          "output": "public/images/curve-1-old.png",
+          "name": "curve-1-old.png",
+          "category": "IMAGE",
+          "size": 4438,
+          "type": "png",
+          "initialSize": 4438,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d3ade0a0": {
+          "id": "d3ade0a0",
+          "path": "public/images/curve-1.png",
+          "output": "public/images/curve-1.png",
+          "name": "curve-1.png",
+          "category": "IMAGE",
+          "size": 4116,
+          "type": "png",
+          "initialSize": 4116,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
