Updated My Trips

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1721,6 +1721,89 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "1af1c8c9": {
+          "id": "1af1c8c9",
+          "path": "app/auth.js",
+          "output": "app/auth-dist.js",
+          "name": "auth.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5188f709": {
+          "id": "5188f709",
+          "path": "public/app/directives/my-trips/my-trips.html",
+          "output": "public/app/directives/my-trips/my-trips.html",
+          "name": "my-trips.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "9e802ff4": {
+          "id": "9e802ff4",
+          "path": "public/app/directives/my-trips/my-trips.js",
+          "output": "public/app/directives/my-trips/my-trips-dist.js",
+          "name": "my-trips.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c9f36622": {
+          "id": "c9f36622",
+          "path": "public/app/directives/one-trip/one-trip.html",
+          "output": "public/app/directives/one-trip/one-trip.html",
+          "name": "one-trip.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7724a8f0": {
+          "id": "7724a8f0",
+          "path": "public/app/directives/one-trip/one-trip.js",
+          "output": "public/app/directives/one-trip/one-trip-dist.js",
+          "name": "one-trip.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a3b66091": {
+          "id": "a3b66091",
+          "path": "public/images/marker.png",
+          "output": "public/images/marker.png",
+          "name": "marker.png",
+          "category": "IMAGE",
+          "size": 5714,
+          "type": "png",
+          "initialSize": 5714,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
