Integrated with Distance and Map for each place

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1939,6 +1939,33 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "244f9450": {
+          "id": "244f9450",
+          "path": "public/app/directives/list-cities/direction-map/direction-map.html",
+          "output": "public/app/directives/list-cities/direction-map/direction-map.html",
+          "name": "direction-map.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2e443807": {
+          "id": "2e443807",
+          "path": "public/app/directives/list-cities/direction-map/direction-map.js",
+          "output": "public/app/directives/list-cities/direction-map/direction-map-dist.js",
+          "name": "direction-map.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
