Updated the Trips Page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1966,6 +1966,81 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "2e51d1dd": {
+          "id": "2e51d1dd",
+          "path": "public/app/modals/signup.html",
+          "output": "public/app/modals/signup.html",
+          "name": "signup.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1ecf2e6a": {
+          "id": "1ecf2e6a",
+          "path": "public/images/road.jpeg",
+          "output": "public/images/road.jpeg",
+          "name": "road.jpeg",
+          "category": "IMAGE",
+          "size": 146356,
+          "type": "jpeg",
+          "initialSize": 146356,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f9a3aaf9": {
+          "id": "f9a3aaf9",
+          "path": "public/images/road.png",
+          "output": "public/images/road.png",
+          "name": "road.png",
+          "category": "IMAGE",
+          "size": 431818,
+          "type": "png",
+          "initialSize": 431818,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "891e4575": {
+          "id": "891e4575",
+          "path": "public/app/directives/trip-details/trip-details.html",
+          "output": "public/app/directives/trip-details/trip-details.html",
+          "name": "trip-details.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6d8eee5e": {
+          "id": "6d8eee5e",
+          "path": "public/app/directives/trip-details/trip-details.js",
+          "output": "public/app/directives/trip-details/trip-details-dist.js",
+          "name": "trip-details.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f49c5b72": {
+          "id": "f49c5b72",
+          "path": "public/app/directives/my-trips/trip-details/trip-details.html",
+          "output": "public/app/directives/my-trips/trip-details/trip-details.html",
+          "name": "trip-details.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
