Adding places for pre-saved trips

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3375,6 +3375,71 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "17578d21": {
+          "id": "17578d21",
+          "path": "public/images/explore_colorado.jpeg",
+          "output": "public/images/explore_colorado.jpeg",
+          "name": "explore_colorado.jpeg",
+          "category": "IMAGE",
+          "size": 2998089,
+          "type": "jpeg",
+          "initialSize": 2998089,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c4ab7e9a": {
+          "id": "c4ab7e9a",
+          "path": "public/images/explore_Pacific_Coast_Highway.jpg",
+          "output": "public/images/explore_Pacific_Coast_Highway.jpg",
+          "name": "explore_Pacific_Coast_Highway.jpg",
+          "category": "IMAGE",
+          "size": 447631,
+          "type": "jpg",
+          "initialSize": 447631,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "952f3bb4": {
+          "id": "952f3bb4",
+          "path": "public/images/explore_Montana.jpg",
+          "output": "public/images/explore_Montana.jpg",
+          "name": "explore_Montana.jpg",
+          "category": "IMAGE",
+          "size": 659770,
+          "type": "jpg",
+          "initialSize": 659770,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9a556b27": {
+          "id": "9a556b27",
+          "path": "public/images/explore_Arizona.jpg",
+          "output": "public/images/explore_Arizona.jpg",
+          "name": "explore_Arizona.jpg",
+          "category": "IMAGE",
+          "size": 592098,
+          "type": "jpg",
+          "initialSize": 592098,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "56ce036e": {
+          "id": "56ce036e",
+          "path": "public/images/footer.jpg",
+          "output": "public/images/footer.jpg",
+          "name": "footer.jpg",
+          "category": "IMAGE",
+          "size": 799818,
+          "type": "jpg",
+          "initialSize": 799818,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
