--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1541,19 +1541,6 @@
           "height": 0,
           "width": 0
         },
-        "5e355d6c": {
-          "id": "5e355d6c",
-          "path": "public/images/explore-7.png",
-          "output": "public/images/explore-7.png",
-          "name": "explore-7.png",
-          "category": "IMAGE",
-          "size": 1175283,
-          "type": "png",
-          "initialSize": 1175283,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "1d3cf61e": {
           "id": "1d3cf61e",
           "path": "public/images/explore-1.png",
@@ -3437,6 +3424,46 @@
           "size": 799818,
           "type": "jpg",
           "initialSize": 799818,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d63dae80": {
+          "id": "d63dae80",
+          "path": "public/app/components/road-trip/state-explore/state-explore.html",
+          "output": "public/app/components/road-trip/state-explore/state-explore.html",
+          "name": "state-explore.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cd857b0a": {
+          "id": "cd857b0a",
+          "path": "public/app/components/road-trip/state-explore/state-explore.js",
+          "output": "public/app/components/road-trip/state-explore/state-explore-dist.js",
+          "name": "state-explore.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "5e355d6c": {
+          "id": "5e355d6c",
+          "path": "public/images/explore-7.png",
+          "output": "public/images/explore-7.png",
+          "name": "explore-7.png",
+          "category": "IMAGE",
+          "size": 1062612,
+          "type": "png",
+          "initialSize": 1062612,
           "optimized": false,
           "height": 0,
           "width": 0
